src/test/custom/invalid/preCompileSyntaxErr/invalidInclude3.wacc
include List<abc

begin
  skip
end